--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ edition = "2018"
 libp2p = { version = "0.12.0", default-features = false }
 futures = "0.1"
 tokio = "0.1.2"
+exit-future = "0.1"
 log = "0.4.8"
