--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+data-encoding = { version = "2.1.2" }
+lazy_static = { version = "1.4.0" }
+cid = "*"
