--- a/lp2p/Cargo.toml
+++ b/lp2p/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
-name = "plum"
+name = "lp2p"
 version = "0.1.0"
-license = "GPL-3.0"
+authors = ["gguoss <guanghuaguo.oss@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lp2p = { path = "./lp2p" }
 libp2p = { version = "0.12.0", default-features = false }
 futures = "0.1"
 tokio = "0.1.2"
-exit-future = "0.1"
-log = "0.4.8"
