--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 lp2p = { path = "./lp2p" }
+cli = { path = "./cli" }
 libp2p = { version = "0.12.0", default-features = false }
 futures = "0.1"
 tokio = "0.1.2"
