--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,4 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "2.33.0"
+structopt = "0.3"
+tokio = "0.1.2"
+exit-future = "0.1"
+lp2p = { path = "../lp2p" }
+log = "0.4.8"
+env_logger = "0.7.0"
