--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,24 @@
 [package]
 name = "plum"
 version = "0.1.0"
-license = "GPL-3.0"
+authors = ["The PolkaX Authors"]
 edition = "2018"
+license = "GPL-3.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "plum"
+
+[[bin]]
+name = "plum-node"
+path = "src/bin/main.rs"
 
 [dependencies]
 cli = { path = "./cli" }
+
+[workspace]
+members = [
+	"chain",
+	"cli",
+	"lp2p",
+	"peermgr",
+]
