--- a/peermgr/Cargo.toml
+++ b/peermgr/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "peermgr"
-license = "GPL-3.0"
 version = "0.1.0"
+authors = ["The PolkaX Authors"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "GPL-3.0"
 
 [dependencies]
-libp2p = { version = "0.12.0", default-features = false }
+libp2p = { version = "0.13", default-features = false }
 lp2p = { path = "../lp2p" }
-log = "0.4.8"
+log = "0.4"
