--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -6,9 +6,15 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-structopt = "0.3"
-tokio = "0.1"
-exit-future = "0.1"
-lp2p = { path = "../lp2p" }
 log = "0.4"
+atty = "0.2"
+time = "0.1.42"
+tokio = "0.1"
+regex = "1.3.1"
+structopt = "0.3"
 env_logger = "0.7.0"
+exit-future = "0.1"
+ansi_term = "0.12.1"
+lazy_static = "1.4.0"
+
+lp2p = { path = "../lp2p" }
