--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/bin/main.rs"
 
 [dependencies]
 cli = { path = "./cli" }
+wallet = { path = "./wallet" }
 
 [workspace]
 members = [
@@ -21,4 +22,5 @@ members = [
 	"cli",
 	"lp2p",
 	"peermgr",
+	"wallet",
 ]
