--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -15,6 +15,7 @@ hex = "0.4.0"
 rand = "0.7.2"
 serde_json = "1.0.41"
 parking_lot = "0.9.0"
+failure = "0.1.6"
 
 [dev-dependencies]
 tempfile = "3.1.0"
