--- a/lp2p/Cargo.toml
+++ b/lp2p/Cargo.toml
@@ -13,7 +13,9 @@ tokio = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 libp2p = { version = "0.13", default-features = false }
 futures = "0.1"
+futures03 = { package = "futures", version = "0.3.1", features = ["compat"] }
 multihash = "~0.8.0"
 serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "impl-tag", features = ["tags"] }
 
 chain = { path = "../chain" }
+peermgr = { path = "../peermgr" }
