--- a/address/Cargo.toml
+++ b/address/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0", features = ["derive"] }
 derive_more = { version = "0.99.2"}
 rand = "0.7.2"
 hex = "0.4.0"
+thiserror = "1.0"
