--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -12,5 +12,6 @@ derive_more = { version = "0.99.2"}
 serde_json = "1.0.41"
 parking_lot = "0.9.0"
 hex = "0.4.0"
+thiserror = "1.0"
 
 address = {path = "../address"}
