--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -13,5 +13,6 @@ serde_json = "1.0.41"
 parking_lot = "0.9.0"
 hex = "0.4.0"
 thiserror = "1.0"
+tempfile = "3.1.0"
 
 address = {path = "../address"}
