Extract address module (#6)
* Add keystore

* Add error mod

* Add list

* wallet command: new | list complete

* Add export key-info by public key

* Add import-key

* Extract the address module

* Add address decode

* Add test case, delete dead code

Co-authored-by: Liu-Cheng Xu <xuliuchengxlc@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ path = "src/bin/main.rs"
 
 [dependencies]
 cli = { path = "./cli" }
+wallet = { path = "./wallet" }
+address = { path = "./address" }
 
 [workspace]
 members = [
@@ -21,4 +23,6 @@ members = [
 	"cli",
 	"lp2p",
 	"peermgr",
+	"wallet",
+	"address",
 ]
