--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,3 +18,5 @@ ansi_term = "0.12.1"
 lazy_static = "1.4.0"
 
 lp2p = { path = "../lp2p" }
+wallet = { path = "../wallet" }
+address = { path = "../address" }
