Add initial peermgr (#5)
- Communiate with network messages via channel
- Seperate out client from Behavior
- Try keeping the peer set in [min_fil_peers, max_fil_peers]. Do kad bootstrap when there are too few peers.
-----------

* Parse peer_ip into Multiaddr in cli

* Remove unused file that was added by mistake in previous commit

* Split out the client from network using channel

* Use Multiaddr from libp2p::core

* Use None for --log when user passes no command line opts

* Nits

* Add peers in Behaviour

* Mock hello message

* Nits

* Refactoring for introducing disconnect in p2p

* Fill in peermgr

* Expose peermgr receiver channel for now

* Should be ok?

* Nits

* Fix building

* Nits

* Remove address.rs

* Rename to notify

.

--- a/peermgr/Cargo.toml
+++ b/peermgr/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-libp2p = { version = "0.13", default-features = false }
-lp2p = { path = "../lp2p" }
 log = "0.4"
+libp2p = { version = "0.13", default-features = false }
+futures = "0.1"
