--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,12 +11,14 @@ atty = "0.2"
 time = "0.1.42"
 tokio = "0.1"
 regex = "1.3.1"
+libp2p = { version = "0.13" }
+ansi_term = "0.12.1"
 structopt = "0.3"
 env_logger = "0.7.0"
 exit-future = "0.1"
-ansi_term = "0.12.1"
 lazy_static = "1.4.0"
 
 lp2p = { path = "../lp2p" }
+chain = { path = "../chain" }
 wallet = { path = "../wallet" }
 address = { path = "../address" }
