--- a/lp2p/Cargo.toml
+++ b/lp2p/Cargo.toml
@@ -6,11 +6,15 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+cid = "0.3"
+log = "0.4"
+void = "1.0"
+tokio = "0.1"
+serde = { version = "1.0", features = ["derive"] }
 libp2p = { version = "0.13", default-features = false }
 futures = "0.1"
-tokio = "0.1"
-chain = { path = "../chain" }
-void = "1.0"
-cid = "0.3"
 multihash = "~0.8.0"
-log = "0.4"
+serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "impl-tag", features = ["tags"] }
+
+chain = { path = "../chain" }
+peermgr = { path = "../peermgr" }
