--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/bin/main.rs"
 cli = { path = "./cli" }
 wallet = { path = "./wallet" }
 address = { path = "./address" }
+util = { path = "./util" }
 
 [workspace]
 members = [
@@ -25,4 +26,5 @@ members = [
 	"peermgr",
 	"wallet",
 	"address",
+	"util",
 ]
