--- a/address/Cargo.toml
+++ b/address/Cargo.toml
@@ -8,9 +8,11 @@ license = "GPL-3.0"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-hex = "0.4"
-bls = { package = "bls-signatures", version = "0.3" }
-libsecp256k1 = "0.3"
 blake2-rfc = "0.2"
 integer-encoding = "1.0"
 data-encoding = "2.1"
+
+[dev-dependencies]
+rand = "0.7"
+bls = { package = "bls-signatures", version = "0.3" }
+libsecp256k1 = "0.3"
