Adjust project structure
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/chain/types/Cargo.toml
+++ b/chain/types/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "chain"
+name = "types"
 version = "0.1.0"
 authors = ["The PolkaX Authors"]
 edition = "2018"
@@ -7,7 +7,5 @@ license = "GPL-3.0"
 
 [dependencies]
 cid = "0.3"
-lazy_static = "1.4"
-data-encoding = "2.1"
 
-address = { path = "address" }
+address = { path = "../address" }
