--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,17 @@ name = "plum-node"
 path = "src/bin/main.rs"
 
 [dependencies]
-address = { path = "./address" }
+address = { path = "chain/address" }
 cli = { path = "./cli" }
-wallet = { path = "./wallet" }
+wallet = { path = "chain/wallet" }
 
 [workspace]
 members = [
-	"address",
+	"chain/address",
 	"chain",
+	"chain/types",
 	"cli",
 	"lp2p",
 	"peermgr",
-	"wallet",
+	"chain/wallet",
 ]
