--- a/chain/wallet/Cargo.toml
+++ b/chain/wallet/Cargo.toml
@@ -7,9 +7,9 @@ license = "GPL-3.0"
 
 [dependencies]
 serde_json = "1.0"
-parking_lot = "0.9"
-hex = "0.4.0"
 thiserror = "1.0"
+blake2-rfc = "0.2"
+rand = "0.7"
 bls = { package = "bls-signatures", version = "0.3" }
 libsecp256k1 = "0.3"
 
