--- a/chain/wallet/Cargo.toml
+++ b/chain/wallet/Cargo.toml
@@ -14,6 +14,7 @@ bls = { package = "bls-signatures", version = "0.3" }
 libsecp256k1 = "0.3"
 
 address = { path = "../address" }
+types = { path = "../types" }
 
 [dev-dependencies]
 tempfile = "3.1"
