--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -22,3 +22,5 @@ lp2p = { path = "../lp2p" }
 chain = { path = "../chain" }
 #wallet = { path = "../chain/wallet" }
 address = { path = "../chain/address" }
+network = { path = "../network" }
+plum_libp2p = { path = "../plum_libp2p" }
