--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -13,3 +13,4 @@ tokio = "0.1.22"
 libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "776d13ef046358964c7d64cda3295a3a3cb24743" }
 log = "0.4.8"
 slog = "2.5.2"
+anyhow = "1.0"
