--- a/plum_libp2p/Cargo.toml
+++ b/plum_libp2p/Cargo.toml
@@ -19,3 +19,5 @@ fnv = "1.0.6"
 smallvec = "1.0.0"
 unsigned-varint = "0.2.3"
 tokio-io-timeout = "0.3.1"
+serde_bytes = { version = "0.11" }
+serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"] }
