--- a/plum_libp2p/Cargo.toml
+++ b/plum_libp2p/Cargo.toml
@@ -14,6 +14,7 @@ serde = {version = "1.0", features = ["derive"]}
 libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "776d13ef046358964c7d64cda3295a3a3cb24743" }
 futures = "0.1.29"
 smallvec = "1.0.0"
+multihash = { package = "parity-multihash", version = "0.2" }
 serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"] }
 serde_bytes = { version = "0.11" }
 unsigned-varint = "0.2.3"
