--- a/chain/wallet/Cargo.toml
+++ b/chain/wallet/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-serde_json = "1.0"
-thiserror = "1.0"
-blake2-rfc = "0.2"
-rand = "0.7"
 bls = { package = "bls-signatures", version = "0.3" }
 libsecp256k1 = "0.3"
+rand = "0.7"
+serde_json = "1.0"
+thiserror = "1.0"
 
-address = { path = "../address" }
+plum_address = { path = "../address" }
+plum_hashing = { path = "../../hashing" }
 
 [dev-dependencies]
 tempfile = "3.1"
