--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -21,6 +21,6 @@ lazy_static = "1.4.0"
 lp2p = { path = "../lp2p" }
 chain = { path = "../chain" }
 #wallet = { path = "../chain/wallet" }
-address = { path = "../chain/address" }
+plum_address = { path = "../chain/address" }
 network = { path = "../network" }
 plum_libp2p = { path = "../plum_libp2p" }
