--- a/chain/types/Cargo.toml
+++ b/chain/types/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-cid = "0.3"
+cid = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-cid", branch = "develop", features = ["serde_support"] }
+bytes = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+anyhow = "1.0"
+thiserror = "1.0"
+serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"] }
+block_format = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-block-format", branch = "develop" }
 
 address = { path = "../address" }
