--- a/chain/types/Cargo.toml
+++ b/chain/types/Cargo.toml
@@ -18,6 +18,7 @@ serde_bytes = "0.11"
 serde_tuple = "0.4"
 serde_repr = "0.1"
 block_format = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-block-format", branch = "develop" }
+rust-ipld-cbor = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-ipld-cbor", branch = "develop", features = ["bigint"] }
 unsigned-varint = "0.3"
 
 address = { path = "../address", package = "plum_address" }
