feat(plum_address): impl json and cbor serde for address
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/chain/Cargo.toml
+++ b/chain/Cargo.toml
@@ -10,4 +10,4 @@ cid = "0.3"
 lazy_static = "1.4"
 data-encoding = "2.1"
 
-plum_address = { path = "address" }
+plum_address = { path = "address", features = ["serde"] }
