--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ name = "plum-node"
 path = "src/bin/main.rs"
 
 [dependencies]
-plum_address = { path = "chain/address" }
+plum_address = { path = "chain/address", features = ["serde"] }
 cli = { path = "./cli" }
 wallet = { path = "chain/wallet" }
 
