--- a/chain/address/Cargo.toml
+++ b/chain/address/Cargo.toml
@@ -5,17 +5,22 @@ authors = ["The PolkaX Authors"]
 edition = "2018"
 license = "GPL-3.0"
 
+[features]
+serde = ["serde1", "serde_bytes", "serde_cbor", "serde_json"]
+
 [dependencies]
 data-encoding = "2.1"
-serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 unsigned-varint = "0.3"
-serde_bytes = "0.11"
 
 plum_hashing = { path = "../../hashing" }
 
+serde1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }
+serde_bytes = { version = "0.11", optional = true }
+serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"], optional = true }
+serde_json = { version = "1.0", optional = true }
+
 [dev-dependencies]
-bls = { package = "bls-signatures", version = "0.3" }
-rand = "0.7"
-serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"] }
+bls = { package = "bls-signatures", version = "0.5" }
 libsecp256k1 = "0.3"
+rand = "0.7"
