--- a/chain/types/Cargo.toml
+++ b/chain/types/Cargo.toml
@@ -20,7 +20,7 @@ block_format = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-bl
 rust-ipld-cbor = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-ipld-cbor", branch = "filecoin-master", features = ["bigint"] }
 unsigned-varint = "0.3"
 
-address = { path = "../address", package = "plum_address" }
+address = { path = "../address", package = "plum_address", features = ["serde"] }
 
 [dev-dependencies]
 serde_json = "1"
