--- a/sigs/Cargo.toml
+++ b/sigs/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 bls = { package = "bls-signatures", version = "0.5" }
+rand = "0.7"
 anyhow = "1.0"
 libsecp256k1 = "0.3"
 
