--- a/chain/wallet/Cargo.toml
+++ b/chain/wallet/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = "1.0"
 serde_json = "1.0"
 
 sigs = { path = "../../sigs" }
+types = { path = "../types" }
 plum_address = { path = "../address" }
 plum_hashing = { path = "../../hashing" }
 
