--- a/sigs/Cargo.toml
+++ b/sigs/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "sigs"
 version = "0.1.0"
-authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
+authors = ["The PolkaX Authors"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bls = { package = "bls-signatures", version = "0.5" }
@@ -12,4 +10,4 @@ rand = "0.7"
 anyhow = "1.0"
 libsecp256k1 = "0.3"
 
-plum_hashing = { path = "../hashing" }
+hashing = { path = "../hashing", package = "plum_hashing" }
