--- a/chain/wallet/Cargo.toml
+++ b/chain/wallet/Cargo.toml
@@ -9,9 +9,12 @@ license = "GPL-3.0"
 bls = { package = "bls-signatures", version = "0.5" }
 libsecp256k1 = "0.3"
 rand = "0.7"
-serde_json = "1.0"
+anyhow = "1.0"
 thiserror = "1.0"
+serde_json = "1.0"
 
+sigs = { path = "../../sigs" }
+types = { path = "../types" }
 plum_address = { path = "../address" }
 plum_hashing = { path = "../../hashing" }
 
