--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/bin/main.rs"
 
 [dependencies]
 plum_address = { path = "chain/address", features = ["serde"] }
-abi = { path = "chain/abi", features = ["serde"] }
+abi = { path = "chain/abi"}
 cli = { path = "./cli" }
 wallet = { path = "chain/wallet" }
 
