--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,14 @@ name = "plum-node"
 path = "src/bin/main.rs"
 
 [dependencies]
-plum_address = { path = "chain/address", features = ["serde"] }
+plum_address = { path = "chain/address" }
 cli = { path = "./cli" }
 wallet = { path = "chain/wallet" }
 
 [workspace]
 members = [
     "chain/address",
+    "chain/bigint",
 	"chain/types",
 	"chain/wallet",
 	"chain",
