--- a/chain/address/Cargo.toml
+++ b/chain/address/Cargo.toml
@@ -6,20 +6,20 @@ edition = "2018"
 license = "GPL-3.0"
 
 [features]
+default = ["serde"]
 serde = ["serde1", "serde_bytes", "serde_cbor", "serde_json"]
 
 [dependencies]
 data-encoding = "2.1"
-thiserror = "1.0"
-unsigned-varint = "0.3"
 lazy_static = "1.4"
-
-plum_hashing = { path = "../../hashing" }
-
 serde1 = { package = "serde", version = "1.0", features = ["derive"], optional = true }
 serde_bytes = { version = "0.11", optional = true }
 serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"], optional = true }
 serde_json = { version = "1.0", optional = true }
+thiserror = "1.0"
+unsigned-varint = "0.3"
+
+plum_hashing = { path = "../../hashing" }
 
 [dev-dependencies]
 bls = { package = "bls-signatures", version = "0.5" }
