--- a/hashing/Cargo.toml
+++ b/hashing/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-blake2-rfc = "0.2"
+blake2b_simd = { version = "0.5", default-features = false }
+blake2s_simd = { version = "0.5", default-features = false }
+digest = { version = "0.8", default-features = false }
+sha-1 = { version = "0.8", default-features = false }
+sha2 = { version = "0.8", default-features = false }
+sha3 = { version = "0.8", default-features = false }
