--- a/chain/abi/Cargo.toml
+++ b/chain/abi/Cargo.toml
@@ -7,6 +7,8 @@ license = "GPL-3.0"
 
 [dependencies]
 thiserror = "1.0"
+bitfield-rle = "0.1"
+serde = { version = "1.0", features = ["derive"] }
 rust-ipld-cbor = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-ipld-cbor", branch = "filecoin-master", features = ["bigint"] }
 cid = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-cid", branch = "filecoin-master", features = ["serde_support"] }
 types = { path = "../types" }
