--- a/chain/types/Cargo.toml
+++ b/chain/types/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0"
 
 [dependencies]
 log = "0.4"
-cid = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-cid", branch = "filecoin-master", features = ["serde_support"] }
+cid = { package = "rust-cid", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master", features = ["serde_support"] }
 bytes = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
@@ -16,11 +16,11 @@ byteorder = "1"
 serde_cbor = { git = "https://github.com/PolkaX/cbor", branch = "f64ser-hack", features = ["tags"] }
 serde_bytes = "0.11"
 serde_tuple = "0.4"
-block_format = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-block-format", branch = "filecoin-master" }
-rust-ipld-cbor = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-ipld-cbor", branch = "filecoin-master", features = ["bigint"] }
+block_format = { package = "rust-block-format", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }
 unsigned-varint = "0.3"
 
-address = { path = "../address", package = "plum_address" }
+address = { package = "plum_address", path = "../address" }
+plum_bigint = { path = "../bigint" }
 
 [dev-dependencies]
 serde_json = "1"
