--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,22 +13,24 @@ name = "plum-node"
 path = "src/bin/main.rs"
 
 [dependencies]
-plum_address = { path = "chain/address" }
+plum_address = { path = "./chain/address" }
+abi = { path = "./chain/abi"}
 cli = { path = "./cli" }
-wallet = { path = "chain/wallet" }
+wallet = { path = "./chain/wallet" }
 
 [workspace]
 members = [
-  "chain/address",
-  "chain/bigint",
-  "chain/types",
-  "chain/wallet",
-  "chain",
-  "cli",
-  "crypto",
-  "sigs",
-  "hashing",
-  "peermgr",
-  "plum_libp2p",
-  "network",
+    "chain/address",
+    "chain/bigint",
+    "chain/types",
+    "chain/wallet",
+	"chain/abi",
+    "chain",
+    "codec/rle",
+    "cli",
+    "sigs",
+    "hashing",
+    "peermgr",
+    "network",
+    "plum_libp2p",
 ]
