--- a/codec/rle/Cargo.toml
+++ b/codec/rle/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "codec-rle"
 version = "0.1.0"
-authors = ["Aten <jincxmain@gmail.com>"]
+authors = ["The PolkaX Authors"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "GPL-3.0"
 
 [dependencies]
 num = "0.2"
