--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -13,6 +13,7 @@ serde = "1.0"
 serde_bytes = "0.11"
 thiserror = "1.0"
 
+plum_address = { path = "../chain/address" }
 plum_hashing = { path = "../hashing" }
 
 [dev-dependencies]
