--- a/chain/abi/Cargo.toml
+++ b/chain/abi/Cargo.toml
@@ -17,7 +17,7 @@ enum-repr-derive = "0.1.3"
 cid = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-cid", branch = "filecoin-master", features = ["serde_support"] }
 
 types = { path = "../types" }
-plum_bigint = { path = "../bigint" }
+plum_bigint = { path = "../../primitives/bigint" }
 codec-rle = { path = "../../codec/rle" }
 serde-support = { package = "codec-serde-support", path = "../../codec/serde-support" }
 
