--- a/chain/types/Cargo.toml
+++ b/chain/types/Cargo.toml
@@ -19,8 +19,8 @@ serde_tuple = "0.4"
 block_format = { package = "rust-block-format", git = "https://github.com/PolkaX/rust-ipfs", branch = "filecoin-master" }
 unsigned-varint = "0.3"
 
-plum_address = { path = "../../primitives/address" }
-plum_bigint = { path = "../../primitives/bigint" }
+plum_address = { path = "../address" }
+plum_bigint = { path = "../bigint" }
 
 [dev-dependencies]
 serde_json = "1"
