--- a/chain/wallet/Cargo.toml
+++ b/chain/wallet/Cargo.toml
@@ -15,7 +15,7 @@ serde_json = "1.0"
 
 sigs = { path = "../../sigs" }
 types = { path = "../types" }
-plum_address = { path = "../../primitives/address" }
+plum_address = { path = "../address" }
 plum_hashing = { path = "../../hashing" }
 
 [dev-dependencies]
