--- a/primitives/block/Cargo.toml
+++ b/primitives/block/Cargo.toml
@@ -9,7 +9,7 @@ license = "GPL-3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 
-cid = { git = "https://github.com/PolkaX/rust-cid", branch = "ext", features = ["impl-serde"] }
+cid = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-serde", features = ["impl-serde"] }
 
 plum_address = { path = "../../chain/address" }
 plum_bigint = { path = "../../chain/bigint" }
