--- a/primitives/message/Cargo.toml
+++ b/primitives/message/Cargo.toml
@@ -9,8 +9,8 @@ license = "GPL-3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 
-plum_address = { path = "../../chain/address" }
-plum_bigint = { path = "../../chain/bigint" }
+plum_address = { path = "../address" }
+plum_bigint = { path = "../bigint" }
 plum_crypto = { path = "../../crypto" }
 
 [dev-dependencies]
