--- a/chain/abi/Cargo.toml
+++ b/chain/abi/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-thiserror = "1.0"
+cid = { version = "0.4", features = ["impl-serde"] }
+enum-repr-derive = "0.1.3"
+primitive-types = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
-serde_tuple = "0.4"
 serde_repr = "0.1"
-primitive-types = "0.6"
-enum-repr-derive = "0.1.3"
-
-cid = { git = "https://github.com/PolkaX/rust-ipfs", package = "rust-cid", branch = "filecoin-master", features = ["serde_support"] }
+serde_tuple = "0.4"
+thiserror = "1.0"
 
 types = { path = "../types" }
 plum_bigint = { path = "../../primitives/bigint" }
