--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -20,5 +20,5 @@ lazy_static = "1.4.0"
 chain = { path = "../chain" }
 #wallet = { path = "../chain/wallet" }
 plum_address = { path = "../primitives/address" }
-network = { path = "../network" }
 plum_libp2p = { path = "../libp2p" }
+plum_network = { path = "../network" }
