--- a/codec/serde-support/Cargo.toml
+++ b/codec/serde-support/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "codec-serde-support"
 version = "0.1.0"
-authors = ["Aten <jincxmain@gmail.com>"]
+authors = ["The PolkaX Authors"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "GPL-3.0"
 
 [dependencies]
+primitive-types = { version = "0.6" }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_bytes = "0.11"
-primitive-types = { version = "0.6" }
