--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+base64 = "0.12"
 bls = { package = "bls-signatures", version = "0.5" }
 libsecp256k1 = "0.3"
 rand = "0.7"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 thiserror = "1.0"
 
@@ -18,4 +19,4 @@ plum_hashing = { path = "../hashing" }
 
 [dev-dependencies]
 serde_cbor = "0.11"
-serde_derive = "1.0"
+serde_json = "1.0"
