--- a/primitives/block/Cargo.toml
+++ b/primitives/block/Cargo.toml
@@ -7,14 +7,14 @@ license = "GPL-3.0"
 
 [dependencies]
 cid = { version = "0.4", features = ["impl-serde"] }
+multihash = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
+serde_cbor = { version = "0.11.1", features = ["tags"] }
+serde_json = "1.0"
 
 plum_address = { path = "../address" }
 plum_bigint = { path = "../bigint" }
 plum_crypto = { path = "../../crypto" }
 plum_message = { path = "../message" }
 plum_ticket = { path = "../ticket" }
-
-[dev-dependencies]
-serde_cbor = "0.11.1"
