--- a/primitives/ticket/Cargo.toml
+++ b/primitives/ticket/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+base64 = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 
 [dev-dependencies]
 serde_cbor = "0.11.1"
+serde_json = "1.0"
