--- a/primitives/tipset/Cargo.toml
+++ b/primitives/tipset/Cargo.toml
@@ -6,10 +6,9 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+cid = { version = "0.4", features = ["impl-serde"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-
-cid = { git = "https://github.com/PolkaX/rust-cid", branch = "impl-serde", features = ["impl-serde"] }
 
 plum_block = { path = "../block" }
 
@@ -18,3 +17,7 @@ hex = "0.4"
 multihash = "0.10"
 serde_cbor = { version = "0.11", features = ["tags"] }
 serde_json = "1.0"
+
+plum_address = { path = "../address" }
+plum_crypto = { path = "../../crypto" }
+plum_ticket = { path = "../ticket" }
