Replace codec-serde-support with plum_hash
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,6 @@ members = [
   "chain",
   "cli",
   "codec/rle",
-  "codec/serde-support",
   "crypto",
   "hashing",
   "libp2p",
@@ -37,6 +36,7 @@ members = [
   "primitives/address",
   "primitives/bigint",
   "primitives/block",
+  "primitives/hash",
   "primitives/message",
   "primitives/ticket",
   "primitives/tipset",
