--- a/chain/actors/Cargo.toml
+++ b/chain/actors/Cargo.toml
@@ -8,21 +8,20 @@ license = "GPL-3.0"
 [dependencies]
 cid = { version = "0.4", features = ["impl-serde"] }
 enum-repr-derive = "0.1.3"
-primitive-types = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 serde_repr = "0.1"
 serde_tuple = "0.4"
 thiserror = "1.0"
 
-types = { path = "../types" }
-plum_bigint = { path = "../../primitives/bigint" }
-plum_address = { path = "../../primitives/address" }
-plum_types = { path = "../../primitives/types" }
 codec-rle = { path = "../../codec/rle" }
-serde-support = { package = "codec-serde-support", path = "../../codec/serde-support" }
+plum_address = { path = "../../primitives/address" }
+plum_bigint = { path = "../../primitives/bigint" }
+plum_hash = { path = "../../primitives/hash" }
+plum_types = { path = "../../primitives/types" }
+types = { path = "../types" }
 
 [dev-dependencies]
-serde_cbor = "0.11"
 hex-literal = "0.2"
 multihash = "0.10.1"
+serde_cbor = "0.11"
