--- a/primitives/hash/Cargo.toml
+++ b/primitives/hash/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "codec-serde-support"
+name = "plum_hash"
 version = "0.1.0"
 authors = ["The PolkaX Authors"]
 edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-primitive-types = { version = "0.6" }
-serde = { version = "1.0", features = [ "derive" ] }
+fixed-hash = "0.6"
+serde = "1.0"
 serde_bytes = "0.11"
