Move the plum_wallet to root dir
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ cli = { path = "./cli" }
 members = [
   "chain/actors",
   "chain/types",
-  "chain/wallet",
   "chain",
   "cli",
   "codec/rle",
@@ -42,4 +41,5 @@ members = [
   "primitives/types",
   "sigs",
   "vm",
+  "wallet",
 ]
