--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -12,8 +12,8 @@ rand = "0.7"
 serde_json = "1.0"
 thiserror = "1.0"
 
-plum_address = { path = "../../primitives/address" }
-plum_crypto = { path = "../../crypto" }
+plum_address = { path = "../primitives/address" }
+plum_crypto = { path = "../crypto" }
 
 [dev-dependencies]
 tempfile = "3.1"
