--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -9,6 +9,8 @@ license = "GPL-3.0"
 bls = { package = "bls-signatures", version = "0.5" }
 libsecp256k1 = "0.3"
 rand = "0.7"
+serde = { version = "1.0", features = ["derive"] }
+serde_bytes = "0.11"
 serde_json = "1.0"
 thiserror = "1.0"
 
