Remove chain-types and sigs; Rename chain => plum_chain, actors => plum_actor
Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,7 @@ cli = { path = "./cli" }
 
 [workspace]
 members = [
-  "chain/actors",
-  "chain/types",
+  "chain/actor",
   "chain",
   "cli",
   "codec/rle",
@@ -39,7 +38,6 @@ members = [
   "primitives/ticket",
   "primitives/tipset",
   "primitives/types",
-  "sigs",
   "vm",
   "wallet",
 ]
