--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -17,8 +17,8 @@ env_logger = "0.7"
 exit-future = "0.1"
 lazy_static = "1.4.0"
 
-chain = { path = "../chain" }
-#wallet = { path = "../chain/wallet" }
 plum_address = { path = "../primitives/address" }
+plum_chain = { path = "../chain" }
 plum_libp2p = { path = "../libp2p" }
 plum_network = { path = "../network" }
+#plum_wallet = { path = "../wallet" }
