--- a/primitives/address/Cargo.toml
+++ b/primitives/address/Cargo.toml
@@ -16,7 +16,7 @@ unsigned-varint = "0.3"
 plum_hashing = { path = "../../hashing" }
 
 [dev-dependencies]
-bls = { package = "bls-signatures", version = "0.5" }
+bls-signatures = "0.5"
 libsecp256k1 = "0.3"
 rand = "0.7"
 serde_cbor = "0.11"
