--- a/libp2p/Cargo.toml
+++ b/libp2p/Cargo.toml
@@ -8,14 +8,10 @@ license = "GPL-3.0"
 [dependencies]
 cid = { version = "0.4", features = ["impl-serde"] }
 fnv = "1.0.6"
-futures = "0.1.29"
-libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "776d13ef046358964c7d64cda3295a3a3cb24743" }
+futures = "0.3"
+libp2p = "0.16"
 log = "0.4.8"
 multihash = "0.10"
 serde = { version = "1.0", features = ["derive"] }
-serde_bytes = "0.11"
-serde_cbor = "0.11"
-smallvec = "1.0.0"
-tokio = "0.1.22"
-tokio-io-timeout = "0.3.1"
-unsigned-varint = "0.2.3"
+serde_cbor = { version = "0.11", features = ["tags"] }
+smallvec = "1.2"
