--- a/libp2p/Cargo.toml
+++ b/libp2p/Cargo.toml
@@ -9,9 +9,25 @@ license = "GPL-3.0"
 cid = { version = "0.4", features = ["impl-serde"] }
 fnv = "1.0.6"
 futures = "0.3"
-libp2p = "0.16"
 log = "0.4.8"
 multihash = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = { version = "0.11", features = ["tags"] }
 smallvec = "1.2"
+
+[dependencies.libp2p]
+version = "0.17"
+default-features = false
+features = [
+    "dns",
+    "identify",
+    "kad",
+    "gossipsub",
+    "mdns",
+    "mplex",
+    "ping",
+    "secio",
+    "secp256k1",
+    "tcp",
+    "yamux",
+]
