--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+
+plum_message = { path = "../primitives/message" }
