--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-bls-signatures = "0.5"
+bls-signatures = "0.6"
 libsecp256k1 = "0.3"
 parking_lot = "0.10"
 rand = "0.7"
@@ -15,5 +15,5 @@ serde_json = "1.0"
 thiserror = "1.0"
 
 plum_address = { path = "../primitives/address" }
+plum_bytes = { path = "../primitives/bytes" }
 plum_crypto = { path = "../crypto" }
-plum_types = { path = "../primitives/types" }
