--- a/primitives/address/Cargo.toml
+++ b/primitives/address/Cargo.toml
@@ -8,17 +8,15 @@ license = "GPL-3.0"
 [dependencies]
 data-encoding = "2.1"
 lazy_static = "1.4"
+minicbor = { version = "0.3", features = ["std"] }
 serde = "1.0"
-serde_bytes = "0.11"
 thiserror = "1.0"
 unsigned-varint = "0.3"
 
 plum_hashing = { path = "../../hashing" }
 
 [dev-dependencies]
-bls-signatures = "0.5"
+bls-signatures = "0.6"
 libsecp256k1 = "0.3"
 rand = "0.7"
-serde_cbor = "0.11"
-serde_derive = "1.0"
 serde_json = "1.0"
