--- a/primitives/bytes/Cargo.toml
+++ b/primitives/bytes/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "plum_hash"
+name = "plum_bytes"
 version = "0.1.0"
 authors = ["The PolkaX Authors"]
 edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-fixed-hash = "0.6"
+base64 = "0.12"
 minicbor = { version = "0.3", features = ["std"] }
+serde = "1.0"
