--- a/primitives/hash/Cargo.toml
+++ b/primitives/hash/Cargo.toml
@@ -8,3 +8,6 @@ license = "GPL-3.0"
 [dependencies]
 fixed-hash = "0.6"
 minicbor = { version = "0.3", features = ["std"] }
+serde = "1.0"
+
+plum_bytes = { path = "../bytes" }
