--- a/primitives/sector/Cargo.toml
+++ b/primitives/sector/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "plum_piece"
+name = "plum_sector"
 version = "0.1.0"
 authors = ["The PolkaX Authors"]
 edition = "2018"
@@ -9,7 +9,11 @@ license = "GPL-3.0"
 cid = { version = "0.5", features = ["impl-serde"] }
 minicbor = { version = "0.3", features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
-thiserror = "1.0"
+serde_repr = "0.1"
+
+plum_bigint = { path = "../bigint" }
+plum_bytes = { path = "../bytes" }
+plum_types = { path = "../types" }
 
 [dev-dependencies]
 serde_json = "1.0"
