--- a/params/Cargo.toml
+++ b/params/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 license = "GPL-3.0"
 
 [dependencies]
-plum_types = { path = "../primitives/types" }
+plum_sector = { path = "../primitives/sector" }
